[gd_scene load_steps=9 format=3 uid="uid://dp17w6vfm65dc"]

[ext_resource type="Script" uid="uid://uwvelejyjf3d" path="res://scripts/namazon_item.gd" id="1_8v8ey"]
[ext_resource type="Texture2D" uid="uid://d3gnkxrn8c8dy" path="res://img/ui/popup/item_display.png" id="1_f4wsb"]
[ext_resource type="SpriteFrames" uid="uid://bpqtg0hvwlvsp" path="res://tres/gold_coin_animation.tres" id="3_8v8ey"]
[ext_resource type="StyleBox" uid="uid://l7ml62qm5sdc" path="res://tres/presets/button_style.tres" id="3_ntt3t"]
[ext_resource type="StyleBox" uid="uid://vplgq7bjvkbg" path="res://tres/presets/button_disabled.tres" id="3_vnyha"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7e4v5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_75oek"]
texture = ExtResource("1_f4wsb")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ntt3t"]
bg_color = Color(0.164706, 0.164706, 0.164706, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="NamazonItem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8v8ey")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 300.0
offset_bottom = 300.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_7e4v5")

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_75oek")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 7

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ItemName" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 30
text = "NAME"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ntt3t")

[node name="ItemImage" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="PurchaseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
theme_override_styles/disabled = ExtResource("3_vnyha")
theme_override_styles/hover = ExtResource("3_ntt3t")
theme_override_styles/pressed = ExtResource("3_ntt3t")
theme_override_styles/normal = ExtResource("3_ntt3t")
text = "   PURCHASE"

[node name="GoldCoinAnimation" type="AnimatedSprite2D" parent="PanelContainer/MarginContainer/VBoxContainer/PurchaseButton"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(35, 30)
scale = Vector2(2.5, 2.5)
sprite_frames = ExtResource("3_8v8ey")
animation = &"main_animation"
frame_progress = 0.323533

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PurchaseButton" to="." method="_on_purchase_button_pressed"]
